# cmake-simple-build-environment

./: CMakeLists.txt  Concept.md  Example.md  Installation.md  ProjectHome.md  makeDebPackage.sh
branches/buildtreedependecies/scripts/: AddBinaryTargets.cmake  AddCoverityTargets.cmake  AddInstallTarget.cmake  AddInstallTargetForContainer.cmake  BuildDependencies.cmake  ConfigureDependencies.cmake  DeployDependencies.cmake  ExportDependencies.cmake
branches/buildtreedependecies/templates/: ExternalBinaryPackageConfig.cmake.in
branches/context/: CMakeLists.txt  makeDebPackage.sh
branches/context/scripts/: AddCoverityTargets.cmake  AddImportedTarget.cmake  AddInstallTarget.cmake  AddPackageTarget.cmake  AddTagTarget.cmake  AddTestTargets.cmake  BuildDependencies.cmake  Package.cmake  PackageConfigurator.cmake  PackageExporter.cmake  TargetAsn1.cmake  TargetBinary.cmake  TargetCoverity.cmake  TargetGraph.cmake  TargetInstall.cmake  TargetPackage.cmake  TargetTag.cmake  TargetTest.cmake
branches/context/scripts/checkers/: CheckHeaderExists.cmake
branches/context/scripts/documentation/: ConvertIssuesToLinksForDoxygen.cmake  GeneratePlantUMLForDoxygen.cmake
branches/context/scripts/helpers/: AddDependenciesToTarget.cmake  AddVbtDoc.cmake  ArgumentParser.cmake  ColorMessage.cmake  ContextParser.cmake  CopyIfNewer.cmake  GenerateOverallReleaseNotes.cmake  JSonParser.cmake  PrintHelp.cmake  PropertiesParser.cmake  TagSources.cmake
branches/context/shellScripts/: ConfigurePackage.cmake  ExportPackage.cmake  printAndExecuteCommand  sbeConfigureInEclipse.in  sbeConfigurePackage.in
branches/context/templates/: ContainerPackageConfig.cmake.in  ImportedTargetImportFile.cmake.in  ImportedTargets.cmake.in  PackageWithoutTargetConfig.cmake.in
scripts/: AddBinaryTargets.cmake  AddCoverityTargets.cmake  AddInstallTarget.cmake  AddInstallTargetForExternalBinary.cmake  AddPackageTarget.cmake  AddTagTarget.cmake  AddTestTargets.cmake  BuildDependencies.cmake  CheckNewDependencies.cmake  DeployDependencies.cmake  ExportDependencies.cmake  InstallDependencies.cmake  Package.cmake  PackageConfigurator.cmake  PackageExporter.cmake  TargetAsn1.cmake  TargetBinary.cmake  TargetCoverity.cmake  TargetGraph.cmake  TargetHelp.cmake  TargetImported.cmake  TargetInstall.cmake  TargetPackage.cmake  TargetTag.cmake  TargetTest.cmake  UpdateToLatestDependencies.cmake
scripts/checkers/: CheckHeaderExists.cmake
scripts/documentation/: DecorateDoxygen.cmake  GeneratePlantUMLForDoxygen.cmake
scripts/helpers/: AddDependenciesToTarget.cmake  ArgumentParser.cmake  ContextParser.cmake  CopyIfNewer.cmake  DependenciesParser.cmake  GenerateGraph.cmake  JSonParser.cmake  PropertiesParser.cmake  ReleaseNoteGenerator.cmake  SnapshotSources.cmake  SvnHelpers.cmake  TagSources.cmake  VersionParser.cmake
shellScripts/: ExportPackage.cmake  coverityLauncher.in  sbeExportPackage.in  sbeUpdateToLatestDependencies.in
tags/rel_1_0_0/: .project
tags/rel_1_0_0/scripts/: AddBinaryTargets.cmake  AddInstallTarget.cmake  AddPackageTarget.cmake  AddUninstallTarget.cmake  DeployDependencies.cmake
tags/rel_1_0_0/shellScripts/: sbeUpdateToLatestDependencies.in
tags/rel_1_0_0/templates/: ContainerPackageConfig.cmake.in  ExecutablePackageConfig.cmake.in  ExternalTargetImportFile.cmake.in
tags/rel_3_0_0/: install.sh
tags/rel_5_0_0/: CMakeLists.txt
templates/: Asn1CMakeLists.txt.in  ContainerPackageConfig.cmake.in  ImportExportSpecifier.h.in  LibraryPackageConfig.cmake.in  PackageConfig.cmake.in  cmake_uninstall.cmake.in
toolchains/: TiFlags.cmake  ppc-Linux-gnu_4_1_1.cmake  tidsp_mv64-6_1_13.cmake
trunk/: CMakeLists.txt  description-pak  makeDebPackage.sh
trunk/scripts/: AddBinaryTargets.cmake  AddCoverityTargets.cmake  AddInstallTarget.cmake  AddInstallTargetForContainer.cmake  AddInstallTargetForExternalBinary.cmake  AddPackageTarget.cmake  AddTagTarget.cmake  AddTestTargets.cmake  CheckNewDependencies.cmake  DeployDependencies.cmake  ExportDependencies.cmake  InstallDependencies.cmake
trunk/scripts/documentation/: AddReferencedIssuesSectionForDoxygen.cmake  DecorateDoxygen.cmake  GeneratePlantUMLForDoxygen.cmake
trunk/scripts/helpers/: AddDependenciesToTarget.cmake  ArgumentParser.cmake  ChangeExportToImport.cmake  DependenciesParser.cmake  SvnHelpers.cmake  TagSources.cmake
trunk/shellScripts/: coverityLauncher.in  printAndExecuteCommand  sbeDecorateDoxygen.in  sbeGeneratePlantUMLForDoxygen.in
trunk/templates/: ContainerPackageConfig.cmake.in  ImportExportSpecifier.h.in  PackageConfig.cmake.in  PackageWithoutTargetConfig.cmake.in  cmake_uninstall.cmake.in
trunk/toolchains/: GnuFlags.cmake  i686-Linux.cmake
wiki/: Concept.wiki  Example.wiki  Installation.wiki  PlayYourself.wiki
wiki/snippets/: info.cmake
(+34 files in other folders)
